OSG Change log
==============

21th September 2001 - osg-20010921.tar.gz

  o Fixed compilation problem under Windows due to ctime being included
    in the osg::Timer header file.  The ctime refrence has been replaced
    by time.h. Also fixed typo in osgGLUT/Viewer.cpp which was causing
    compilation problems.
  o Made the new osg::Matrix::translate/scale/rotate static method inline
    to help improve peformance.
  o Fixed bugs in osg::Matrix::preMult and postMult.
  

19th September 2001 - osg-20010919.tar.gz

  o Cleaned up the implementation of the osg::Timer class so it is easy
    to read and maintain, and have added support for gettimeofday under
    unix OS's where no other realtime timer is available, if this isn't
    available either than 
  o Added FrameStamp class which encapsulates the frame number,
    reference time and the calander time that a frame in schedualed.
  o Fixed a couple of bugs & integrated further fixes from Paul Fredrikson,
    to the new Matrix implemention, double checked results against the old
    matrix class and am now getting consistent results.  For this dev 
    version onwards the new Matrix class simply replaces the old one. The 
    new Matrix class contains old style methods to keep things compiling,
    however these are deprecated and will be removed, probably by the next 
    full release.  Check the header file for deprecated methods.  You can
    also comment in the #define WARN_DEPRECATED at the top of Matrix.cpp
    and this will produce console warnings.
  o From Don Burns - fixes to src/osgPlugins/osg/GeoSet.cpp adding in 
    an iterator increment to the code for outputing interleaved arrays,
    previously the code entered an .osg writing inifite loop for this 
    data type.
  o Have added #ifndef WIN32 around the call to the new OptimizeStateVisitor
    which was added to sgv to prevent its use automatically under Windows -
    thus avoiding the windows crash due to the MSVC++ buggy SLL implementation.
